--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -106,3 +106,10 @@
         @content;
     }
 }
+
+@mixin limitLine($line) {
+    -webkit-line-clamp: $line;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+ }
