--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -11,3 +11,7 @@
 @import "./pages/cart";
 @import "./pages/about";
 @import "./pages/blog";
+@import "./pages/blogdetail";
+@import "./pages/login";
+@import "./pages/register";
+@import "./pages/order";
