--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,11 +2,13 @@ $white-color: #fff;
 $dark-color: #000;
 $gray-dark-color: #737373;
 $gray-color: #818181;
+$default-color: #e6e6e6;
 $gray-light-color: #d6d6d6;
 $primary-color: #e6ae48;
 $border-color: #e8e8e8;
 $red-color: #ed301c;
 $green-color: #62af26;
+$tag-color: #f26522;
 $secondary-font: "UTM Caviar";
 $primary-font: "Times New Roman", sans-serif;
 $third-font: "Roboto", sans-serif;
