--- a/src/scss/components/_heading.scss
+++ b/src/scss/components/_heading.scss
@@ -1,11 +1,14 @@
 .heading {
+  @include relative;
   @include flexbox(center, center, column);
   margin-bottom: 2.5rem;
+
   &__title {
     font-size: 2.1rem;
     letter-spacing: 0.2rem;
     color: $dark-color;
   }
+
   &--cart {
     display: block;
   }
