--- a/src/pug/data.pug
+++ b/src/pug/data.pug
@@ -5,3 +5,31 @@
     const albums = [2,3,4,5,6,7,8,9];
     const footerLists1 = ["Thông tin", "về chúng tôi","giao hàng", "cảm nghĩ","chính sách riêng tư"];
     const footerLists2 = ["Mua hàng", "Vận chuyển và trả hàng","Mua hàng an toàn", "Vận quốc tế","Liên kết","Dịch vụ giảm giá"];
+    const detailBreadcrumbs = ["Trang chủ","Sản phẩm", "Rượu vang đỏ"];
+    const textDetail = "Đừng nghĩ rằng chỉ vì đôi chân to mà bạn không thể mặc được món đồ nào khác ngoài quần dài. Sau đây là những item vừa trendy lại vừa có tác dụng rất hiệu quả trong việc điều chỉnh đôi chân to của bạn.Mùa hè là mùa của những bộ cánh thoải mái, thoáng mát và hẳn cô gái nào cũng muốn khoe chân tối đa. Tuy nhiên, điều này lại không hề dễ dàng đối với những cô nàng sở hữu đôi chân to.Đừng nghĩ rằng chỉ vì đôi chân to mà bạn không thể mặc được món đồ nào khác ngoài quần dài. Sau đây là những item vừa trendy lại vừa có tác dụng rất hiệu quả trong việc điều chỉnh đôi chân to của bạn.Mùa hè là mùa của những bộ cánh thoải mái, thoáng mát và hẳn cô gái nào cũng muốn khoe chân tối đa. Tuy nhiên, điều này lại không hề dễ dàng đối với những cô nàng sở hữu đôi chân to. Vậy diện đồ thế nào để vừa tạo cảm giác nhẹ nhàng nhưng lại khéo léo giấu được nhược điểm ấy? Sau đây, chúng tôi xin đưa ra gợi ý về loạt item mà các cô nàng chân to nên gắn bó trong mùa hè này."
+    const cartLists = [
+        {
+            name: 'Rượu vang Đà Lạt',
+            image: '1.jpg',
+            price: '330.000',
+            totalPrice: '',
+            desc: 'Một hợp chất có trong rượu vang gọi là resverato có khả năng làm tăng tối đa tuổi thọ. Resverato còn có khả năng ngăn chặn mật độ oxy hóa của protein béo.',
+            type: 'hot'
+        },
+        {
+            name: 'Rượu vang Đà Lạt',
+            image: '4.jpg',
+            price: '370.000',
+            oldPrice: '',
+            desc: 'Một hợp chất có trong rượu vang gọi là resverato có khả năng làm tăng tối đa tuổi thọ. Resverato còn có khả năng ngăn chặn mật độ oxy hóa của protein béo.',
+            type: 'new'
+        },
+        {
+            name: 'Rượu vang Đà Lạt',
+            image: '6.jpg',
+            price: '230.000',
+            oldPrice: '',
+            desc: 'Một hợp chất có trong rượu vang gọi là resverato có khả năng làm tăng tối đa tuổi thọ. Resverato còn có khả năng ngăn chặn mật độ oxy hóa của protein béo.',
+            type: ''
+        },
+    ]
