--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  position: fixed;
+  @include relative;
   min-width: 100%;
   background-color: rgba(255, 255, 255, 0.1);
   &__inner {
@@ -12,7 +12,7 @@
       @include flexbox();
       @include maxWidth($grid__bp-lg) {
         display: none;
-        background-color: rgba(255, 255, 255, 0.1);
+        background-color: $white-color;
         padding: 0.5rem 1rem;
       }
       .list__item {
@@ -20,7 +20,7 @@
         @include paddingX(1rem);
         &:not(:last-child)::before {
           content: "-";
-          color: $white-color;
+          color: $gray-color;
           @include absolute(50%, -2px, null, null);
           @include css3-prefix(transform, translateY(-50%));
           @include maxWidth($grid__bp-lg) {
@@ -28,7 +28,7 @@
           }
         }
         &-link {
-          color: $gray-light-color;
+          color: $gray-color;
         }
         @include maxWidth($grid__bp-lg) {
           @include paddingY(.5rem);
@@ -64,17 +64,16 @@
     }
     &-user {
       @include relative;
+      display: none;
+      @include maxWidth($grid__bp-lg) {
+        display: block;
+      }
       i {
         font-size: 2.2rem;
         color: $gray-light-color;
         cursor: pointer;
       }
-      .user__icon {
-        display: none;
-        @include maxWidth($grid__bp-lg) {
-          display: block;
-        }
-      }
+
     }
     &-check {
       display: none;
@@ -82,8 +81,15 @@
         @include maxWidth($grid__bp-lg) {
           @include absolute(100%);
           @include flexbox(null, null, column);
+          z-index: 3;
         }
       }
+    }
+  }
+  &--home {
+    @include absolute;
+    .header__inner-list .list__item-link {
+      color: $gray-light-color;
     }
   }
 }
