--- a/src/pug/components/mixins.pug
+++ b/src/pug/components/mixins.pug
@@ -1,10 +1,10 @@
 mixin link(href, name)
     a(class!=attributes.class href=href)= name
 
-mixin heading(title)
-    .heading
+mixin heading(title,vector)
+    .heading(class!=attributes.class)
         h1(class ="heading__title")= title
-        img(src="./assets/images/v-heading.png", alt="v-heading")
+        img(src=`./assets/images/v-${vector ? 'title' : 'heading'}.png`, alt="v-heading")
 
 mixin renderList(arr,heading)
     each item in arr
@@ -24,10 +24,44 @@ mixin imageProduct(src)
                     | So sánh
                 i.fas.fa-external-link-alt
 
-mixin renderProduct(src,name,price,discount)
+mixin renderProduct(src,name,price,discount,className)
     .product
-        +imageProduct(src)(class="product__image--new")
+        +imageProduct(src)(class=className)
         h1.product__name= name
         p.product__price= `${price}đ `
             span.product__price-discount=` ${discount}đ`
         button.btn.btn--black add to cart
+
+mixin breadcrumbs(listBreadcrumbs)
+    ul.breadcrumbs
+        each item in listBreadcrumbs
+            li.breadcrumbs__item
+                a(href="#" class="breadcrumbs__item-link")= item
+
+mixin tabs()
+    ul#pills-tab.nav.nav-pills.mb-3(role='tablist')
+        li.nav-item(role='presentation')
+            button#pills-character-tab.nav-link.active(data-bs-toggle='pill' data-bs-target='#pills-character' type='button' role='tab' aria-controls='pills-character' aria-selected='true') Đặt điểm nổi bật
+        li.nav-item(role='presentation')
+            button#pills-info-tab.nav-link(data-bs-toggle='pill' data-bs-target='#pills-info' type='button' role='tab' aria-controls='pills-info' aria-selected='false') Thông tin sản phẩm
+        li.nav-item(role='presentation')
+            button#pills-review-tab.nav-link(data-bs-toggle='pill' data-bs-target='#pills-review' type='button' role='tab' aria-controls='pills-review' aria-selected='false') Đánh giá
+    #pills-tabContent.tab-content
+        #pills-character.tab-pane.fade.show.active(role='tabpanel' aria-labelledby='pills-character-tab')= textDetail
+        #pills-info.tab-pane.fade(role='tabpanel' aria-labelledby='pills-info-tab')= textDetail
+        #pills-review.tab-pane.fade(role='tabpanel' aria-labelledby='pills-review-tab')= textDetail
+
+mixin productRow(item)
+    tr
+        td(width="17%")
+            img(src=`./assets/images/products/${item.image}`, alt=`product-${item.image}`)
+        td(width="34%")
+            h1.product__name= item.name
+        td(width="15%")
+            p.product__price= `${item.price}đ `
+        td(width="15%")
+            input(type="text" class="cart__table-input" value="1")
+        td(width="13%")
+            p.product__price= `${item.price}đ `
+        td(width="6%")
+            i.fas.fa-trash-alt
