--- a/src/pug/layout/header.pug
+++ b/src/pug/layout/header.pug
@@ -1,4 +1,4 @@
-header.header
+header(class=`header ${current === '/' ? 'header--home' : ''}`)
     .container
         .header__inner
             .header__inner-user
@@ -12,4 +12,3 @@ header.header
             .header__inner-search
                 input(type="text", name="" placeholder="Tìm kiếm ở đây ...")
                 i(class="fas fa-search")
-            
