--- a/src/pug/layout/layout.pug
+++ b/src/pug/layout/layout.pug
@@ -1,13 +1,16 @@
 doctype html
 include ../data.pug
+include ../components/mixins
+block variables
 html(lang="en")
     head
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css' integrity='sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO' crossorigin='anonymous')
         link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css')
         link(rel="stylesheet", href="css/styles.css")
-        title My Site - #{title}
+        title= title + " | Wine Shop"
     body
         .wrapper
             block header
@@ -18,5 +21,5 @@ html(lang="en")
             block content
             block footer
                 include footer.pug
-
+        script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous')
 
