--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -1,4 +1,5 @@
 @import "./button";
 @import "./heading";
 @import "./imageproduct";
-@import "./product"
+@import "./product";
+@import "./breadcrumbs"
