--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,3 +7,5 @@
 @import "./layout/layout.scss";
 @import "./components/index.scss";
 @import "./pages/home";
+@import "./pages/detail";
+@import "./pages/cart";
