--- a/src/pug/layout/footer.pug
+++ b/src/pug/layout/footer.pug
@@ -1,7 +1,6 @@
 footer.footer
     .container
-        .footer__brands
-            img(src="./assets/images/footer-image1.jpg", alt="footer-image1")
+        img(src="./assets/images/footer-image1.jpg", alt="footer-image1" class="footer__brands")
         ul.footer__menu
             li.footer__menu-item
                 ul.item__info
