--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,6 +5,8 @@ $gray-color: #818181;
 $gray-light-color: #d6d6d6;
 $primary-color: #e6ae48;
 $border-color: #e8e8e8;
+$red-color: #ed301c;
+$green-color: #62af26;
 $secondary-font: "UTM Caviar";
 $primary-font: "Times New Roman", sans-serif;
 $third-font: "Roboto", sans-serif;
