--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
     &__brands {
+        margin: 0 auto;
         @include maxWidth($grid__bp-sm) {
             display: none;
         }
