--- a/src/scss/pages/_blogdetail.scss
+++ b/src/scss/pages/_blogdetail.scss
@@ -19,7 +19,7 @@
   &-comment {
     .required .col-form-label:after {
       content: " *";
-      color: red;
+      color: $red-color;
     }
 
     .form-control {
