--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -51,7 +51,7 @@ block content
       .newproduct__list
         each item in [1,2,3,4]
           +renderProduct(`./assets/images/products/${item}.jpg`,"rượu vang đà lạt", "370.000","450.000","product__image--sale")
-  section.blog
+  section.blog.blog--home
     .container
       .blog__inner
         .blog__inner-content
