--- a/src/pug/data.pug
+++ b/src/pug/data.pug
@@ -332,3 +332,39 @@
             actions: 'Chi tiết'
         }
     ]
+
+    const accountLists = [
+        {
+            firstName: 'Giang',
+            lastName: 'Lê Anh',
+            company: 'Cổ phần công nghệ DKT',
+            address: 'Tòa nhà Hà Nội Group, 442 Đội Cấn, Ba Đình, Hà Nội',
+            city: 'Hà Nội',
+            country: 'Việt Nam',
+            postal: '2300089',
+            phone: '0974554928',
+            isEdit: true
+        },
+        {
+            firstName: 'Giang',
+            lastName: 'Lê Anh',
+            company: 'Cổ phần công nghệ DKT',
+            address: 'Tòa nhà Hà Nội Group, 442 Đội Cấn, Ba Đình, Hà Nội',
+            city: 'Hà Nội',
+            country: 'Việt Nam',
+            postal: '2300089',
+            phone: '0974554928',
+            isEdit: false
+        },
+        {
+            firstName: 'Giang',
+            lastName: 'Lê Anh',
+            company: 'Cổ phần công nghệ DKT',
+            address: 'Tòa nhà Hà Nội Group, 442 Đội Cấn, Ba Đình, Hà Nội',
+            city: 'Hà Nội',
+            country: 'Việt Nam',
+            postal: '2300089',
+            phone: '0974554928',
+            isEdit: false
+        }
+    ]
