--- a/src/pug/pages/blogdetail.pug
+++ b/src/pug/pages/blogdetail.pug
@@ -42,9 +42,9 @@ block content
             form.comment__form
               h1 đóng góp ý kiến
               .mb-3.row.required
-                +inputText("Tên", "name")
+                +inputText("Tên", "name", "","col-sm-2","col-sm-10",true)
               .mb-3.row.required
-                +inputText("Email", "email")
+                +inputText("Email", "email", "","col-sm-2","col-sm-10",true)
               .mb-3.row.required
                 label.col-sm-2.col-form-label(for='comment') Ý kiến
                 .col-sm-10
