--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,6 +8,7 @@ $primary-color: #e6ae48;
 $border-color: #e8e8e8;
 $red-color: #ed301c;
 $green-color: #62af26;
+$blue-color: #24c5d9;
 $tag-color: #f26522;
 $secondary-font: "UTM Caviar";
 $primary-font: "Times New Roman", sans-serif;
