--- a/src/scss/pages/_order.scss
+++ b/src/scss/pages/_order.scss
@@ -20,7 +20,7 @@
       padding: 2rem 0;
 
       p {
-        color:$dark-color
+        color: $dark-color;
       }
     }
 
@@ -36,7 +36,7 @@
     }
 
     .table-bordered .table__col-num {
-      text-align:left;
+      text-align: left;
     }
 
     .table-bordered tbody {
@@ -68,7 +68,7 @@
       }
 
       i {
-        margin-right:1rem;
+        margin-right: 1rem;
       }
 
       a {
