--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,3 +10,7 @@
 @import "./pages/detail";
 @import "./pages/cart";
 @import "./pages/about";
+@import "./pages/blog";
+@import "./pages/blogdetail";
+@import "./pages/login";
+@import "./pages/register";
