--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,9 +1,8 @@
 .about {
   @include relative;
 
-  @include paddingY(10rem,4rem);
+  @include paddingY(10rem, 4rem);
   .about__image {
-
     &--left {
       @include absolute(0, null, null, 0);
       z-index: -1;
@@ -68,7 +67,7 @@
       }
     }
 
-    .content__image{
+    .content__image {
       width: 55%;
     }
 
@@ -131,11 +130,11 @@
   }
 }
 
-.newproduct{
+.newproduct {
   padding-bottom: 10rem;
 
   &__list {
-    @include flexbox(space-between,center,null,wrap);
+    @include flexbox(space-between, center, null, wrap);
   }
 }
 
@@ -150,7 +149,7 @@
       width: 25%;
 
       @include maxWidth($grid__bp-lg) {
-         width: 50%;
+        width: 50%;
       }
 
       @include maxWidth($grid__bp-sm) {
@@ -163,7 +162,7 @@
 
       .item__hover {
         @include absolute;
-        inset:0;
+        inset: 0;
         border: 5px solid $primary-color;
         opacity: 0;
 
@@ -177,12 +176,14 @@
 }
 
 .blog {
-  @include paddingY(10rem,9.5rem);
+  &--home {
+    @include paddingY(10rem, 9.5rem);
+  }
 
   &__inner {
     @include flexbox(space-between);
 
-    &-content{
+    &-content {
       width: 65%;
     }
 
@@ -210,13 +211,13 @@
           border-radius: 2rem;
 
           img {
-            @include absolute(10%,null,null,-10%);
-            @include css3-prefix(transform,scale(1.5));
+            @include absolute(10%, null, null, -10%);
+            @include css3-prefix(transform, scale(1.5));
           }
         }
 
         &-name {
-          color: $dark-color
+          color: $dark-color;
         }
 
         &-job {
@@ -236,11 +237,10 @@
       }
     }
   }
-
 }
 
 .blog__list {
-  @include flexbox(space-between, null,null,wrap)
+  @include flexbox(space-between, null, null, wrap);
 }
 
 .blog__item {
@@ -248,7 +248,7 @@
 
   @include maxWidth($grid__bp-md) {
     width: 100%;
-    margin-bottom: 2.5rem
+    margin-bottom: 2.5rem;
   }
 
   &-image {
@@ -270,7 +270,7 @@
     &::after {
       content: "";
       @include absolute(8%, null, null, 0);
-      @include size(200%,100%);
+      @include size(200%, 100%);
       background-color: rgba(255, 255, 255, 0.5);
       @include css3-prefix(transform, rotate(-29.3deg) translateY(90%));
       transition: all 0.3s;
@@ -283,14 +283,14 @@
       font-size: 1.5rem;
       background-color: rgba(255, 255, 255, 0.9);
       @include css3-prefix(transform, rotate(180deg) translate(-50%, -50%));
-      transition: all .3s;
-      transition-delay: .3s;
+      transition: all 0.3s;
+      transition-delay: 0.3s;
       opacity: 0;
       z-index: 99;
     }
 
     img {
-      @include absolute(0,null,null,0);
+      @include absolute(0, null, null, 0);
       @include size(100%);
     }
   }
@@ -304,14 +304,14 @@
   &-info {
     margin-bottom: 1rem;
     font-size: 1.2rem;
-    color:$gray-light-color;
+    color: $gray-light-color;
   }
 
   &-desc {
     display: block;
     display: -webkit-box;
     max-width: 400px;
-    height: 14px*1.5*3;
+    height: 14px * 1.5 * 3;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
@@ -324,6 +324,5 @@
   color: $gray-light-color;
 
   &--more {
-
   }
 }
