--- a/src/pug/data.pug
+++ b/src/pug/data.pug
@@ -263,3 +263,72 @@
     ]
 
     const blogTags = ['Đồng hồ', 'Túi', 'Phụ kiện', 'Giày', 'Sandal', 'Áo sơ mi', 'Nước hoa', 'Trẻ em', 'Thời trang nữ']
+
+    const orderLists = [
+        {
+            num: '01',
+            id: 'LEANHGIANG89',
+            date: '17/06/2015',
+            datetime: '01:36 14/03/2015',
+            warehouse: 'HÀ ĐÔNG',
+            amount: 7,
+            total: '350.000đ',
+            status: 'Đã thanh toán',
+            actions: 'Chi tiết'
+        },
+        {
+            num: '02',
+            id: 'LEANHGIANG89',
+            date: '17/06/2015',
+            datetime: '01:36 14/03/2015',
+            warehouse: 'HÀ ĐÔNG',
+            amount: 7,
+            total: '350.000đ',
+            status: 'Đã thanh toán',
+            actions: 'Chi tiết'
+        },
+        {
+            num: '03',
+            id: 'LEANHGIANG89',
+            date: '17/06/2015',
+            datetime: '01:36 14/03/2015',
+            warehouse: 'HÀ ĐÔNG',
+            amount: 7,
+            total: '350.000đ',
+            status: 'Đã thanh toán',
+            actions: 'Chi tiết'
+        },
+        {
+            num: '04',
+            id: 'LEANHGIANG89',
+            date: '17/06/2015',
+            datetime: '01:36 14/03/2015',
+            warehouse: 'HÀ ĐÔNG',
+            amount: 7,
+            total: '350.000đ',
+            status: 'Đã thanh toán',
+            actions: 'Chi tiết'
+        },
+        {
+            num: '05',
+            id: 'LEANHGIANG89',
+            date: '17/06/2015',
+            datetime: '01:36 14/03/2015',
+            warehouse: 'HÀ ĐÔNG',
+            amount: 7,
+            total: '350.000đ',
+            status: 'Đã thanh toán',
+            actions: 'Chi tiết'
+        },
+        {
+            num: '06',
+            id: 'LEANHGIANG89',
+            date: '17/06/2015',
+            datetime: '01:36 14/03/2015',
+            warehouse: 'HÀ ĐÔNG',
+            amount: 7,
+            total: '350.000đ',
+            status: 'Đã thanh toán',
+            actions: 'Chi tiết'
+        }
+    ]
